# rocket_container_rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  log4rs.yaml
src/: lib.rs  main.rs  repository.rs  types.rs
src/controller/: mod.rs  types.rs
src/repository/: advertisement.rs  client.rs  image.rs  mod.rs  types.rs  video.rs
src/repository/types/: advertisement.rs  image.rs  mod.rs  video.rs
src/service/: advertisement.rs  container.rs  image.rs  mod.rs  video.rs
src/service/types/: advertisement.rs  container.rs  image.rs  mod.rs  video.rs
