[package]
name = "rocket_stream_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rocket = "0.5.0-rc.1"
tokio = { version = "1", features = ["full"] }
