[package]
name = "rocket_container"
version = "0.1.0"
authors = ["Ryan Porterfield <ixirsii@protonmail.com>"]
description = "A solution for Bottle Rocket Studio's Rocket Stream coding test"
license = "BSD 3-Clause"
repository = "https://bitbucket.org/Ixirsii/rocket_container_rust"
readme = "README.md"
keywords = ["bottle", "rocket", "studios", "stream"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
log = "0.4.16"
log4rs = { version = "1.0.0", features = ["console_appender", "fixed_window_roller", "gzip", "rolling_file_appender"] }
lru = "0.7.5"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
